--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -40,7 +40,7 @@
 
 @media (max-width: 768px) {
   .inner {
-    height: 129px;
+    height: 64px;
   }
 }
 
